# mkdocs-quarto

./: .gitignore  mkdocs.yml  pyproject.toml
docs/: index.md  index.qmd  mynotebook.ipynb  test.qmd
src/mkdocs_quarto/: __init__.py  extension.py  mkdocs.py
src/test/: __init__.py
tests/: test_markdown_convert.py
